...
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_high"/>
        <Button
            android:id="@+id/buttonLoadCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
...
